// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create shapshot of when item loading is false 1`] = `
.emotion-0 {
  height: 6rem;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto 1fr auto;
  gap: 0.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto;
  gap: 0.25rem;
}

<body>
  <div>
    <div
      class="ui-card emotion-0"
      data-aa-class="Card"
      data-uses-unhanded-props="true"
      role="listitem"
    >
      <div
        class="ui-skeleton"
        data-uses-unhanded-props="true"
      >
        <div
          class="emotion-1"
        >
          <span
            class="ui-skeleton__avatar"
            data-uses-unhanded-props="true"
          />
          <div
            class="emotion-2"
          >
            <span
              class="ui-skeleton__line"
              data-uses-unhanded-props="true"
            />
            <span
              class="ui-skeleton__line"
              data-uses-unhanded-props="true"
            />
            <span
              class="ui-skeleton__line"
              data-uses-unhanded-props="true"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`create shapshot of when item loading is true 1`] = `
.emotion-0 {
  height: 6rem;
}

.emotion-1 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
}

.emotion-2 {
  display: grid;
  gap: 0.25rem;
}

.emotion-3 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr auto auto;
  gap: 0.25rem;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-4 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-5 {
  cursor: pointer;
}

.emotion-7 {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: auto auto auto auto;
  gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
}

<body>
  <div>
    <div
      class="ui-card emotion-0"
      data-aa-class="Card"
      data-uses-unhanded-props="true"
      role="listitem"
    >
      <div
        class="emotion-1"
      >
        <div
          data-testid="AvatarIcon"
        />
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <span
                class="ui-text emotion-5"
                data-uses-unhanded-props="true"
                dir="auto"
                role="button"
              >
                HR Taskforce
              </span>
            </div>
            <div
              data-testid="SensitivityLabel"
            />
            <div
              data-testid="VisibilityIcon"
            />
          </div>
          <div
            class="emotion-4"
          >
            <span
              class="ui-text"
              data-uses-unhanded-props="true"
              dir="auto"
            >
              Welcome to the HR Taskforce team.
            </span>
          </div>
          <div
            class="emotion-7"
          >
            <div
              data-testid="ChannelMenuItem"
            />
            <div
              data-testid="MemberMenuItem"
            />
            <div
              data-testid="DriveMenuItem"
            />
            <div
              data-testid="CalendarMenuItem"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
